# WaveEdit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  MANUAL_TESTING_PHASE2.md  NOTICE  QA_TEST_PLAN_FADE_CURVE_VISUAL.md  QA_TEST_PLAN_SUMMARY.txt  README.md  REVIEW-DESIGN.md  REVIEW-QA.md  REVIEW-USER.md  RegionListPanel_Integration.md  TODO.md  build-and-run.command  build.sh
.github/scripts/: check_readme_keymap.py
.github/workflows/: build.yml
Docs/: multichannel_discovery.md  ui_standards.md  uiux_audit.md
QA_Plans/: MASTER_QA_TEST_PLAN_PREVIEW_SYSTEM.md  QA_MANUAL_TESTING_INSTRUCTIONS.md  QA_TEST_EXECUTION_LOG.md  QA_TEST_PLAN_FADE_CURVE_TYPES.md  QA_TEST_PLAN_INDEX.md  QA_TEST_PLAN_PARAMETRICEQ_PREVIEW.md  QA_TEST_PLAN_PARAMETRIC_EQ_REALTIME.md  QA_TEST_PLAN_PARAMETRIC_EQ_RMS_NORMALIZE.md  QA_TEST_PLAN_PREVIEW_COORDINATE_FIX.md  QA_TEST_PLAN_PREVIEW_CURSOR_ANIMATION.md  QA_TEST_PLAN_PREVIEW_PLAYBACK_FIX.md  QA_TEST_PLAN_RMS_NORMALIZATION.md  QA_TEST_QUICK_REFERENCE.md  QA_TEST_REPORT_PARAMETRIC_EQ_RMS_NORMALIZE.md
Source/: Main.cpp  MainComponent.h  MainComponentEnhanced.cpp
Source/Audio/: AudioBufferManager.cpp  AudioBufferManager.h  AudioEngine.cpp  AudioEngine.h  AudioEngineEnhanced.cpp  AudioEngineEnhanced.h  AudioEngine_MemorySource.cpp  AudioEngine_Preview.cpp  AudioFileManager.cpp  AudioFileManager.h  AudioFileManager_Cues.cpp  AudioProcessor.cpp  AudioProcessor.h  ChannelLayout.h  LameMP3AudioFormat.cpp  LameMP3AudioFormat.h  RecordingEngine.cpp  RecordingEngine.h
Source/Automation/: AutomationData.h  AutomationManager.cpp  AutomationManager.h  AutomationRecorder.cpp  AutomationRecorder.h
Source/Batch/: BatchInputFilter.h  BatchJob.cpp  BatchJob.h  BatchPresetManager.cpp  BatchPresetManager.h  BatchProcessorDialog.cpp  BatchProcessorDialog.h  BatchProcessorDialog_Components.cpp  BatchProcessorDialog_Preview.cpp  BatchProcessorEngine.cpp  BatchProcessorEngine.h  BatchProcessorSettings.cpp  BatchProcessorSettings.h
Source/Commands/: CommandHandler.cpp  CommandHandler.h  CommandHandler_GetInfo.cpp  CommandIDs.h  MenuBuilder.cpp  MenuBuilder.h
Source/Controllers/: ChainWindowListener.h  ClipboardController.cpp  ClipboardController.h  DSPController.cpp  DSPController.h  DSPController_Advanced.cpp  DialogController.cpp  DialogController.h  FileController.cpp  FileController.h  MarkerController.cpp  MarkerController.h  PlaybackController.cpp  PlaybackController.h  PluginController.cpp  PluginController.h  RecordingController.cpp  RecordingController.h  RegionController.cpp  RegionController.h  RegionController_Export.cpp
Source/DSP/: AudioGenerator.cpp  AudioGenerator.h  DynamicParametricEQ.cpp  DynamicParametricEQ.h  EQPresetManager.cpp  EQPresetManager.h  HeadTailEngine.cpp  HeadTailEngine.h  HeadTailRecipe.h  LoopEngine.cpp  LoopEngine.h  LoopRecipe.h  ParametricEQ.cpp  ParametricEQ.h  TimePitchEngine.cpp  TimePitchEngine.h
Source/Plugins/: PluginChain.cpp  PluginChain.h  PluginChainNode.cpp  PluginChainNode.h  PluginChainRenderer.cpp  PluginChainRenderer.h  PluginManager.cpp  PluginManager.h  PluginManager_Persistence.cpp  PluginPathsPanel.cpp  PluginPathsPanel.h  PluginPresetManager.cpp  PluginPresetManager.h  PluginScanDialogs.cpp  PluginScanDialogs.h  PluginScanState.h  PluginScannerCoordinator.cpp  PluginScannerCoordinator.h  PluginScannerProtocol.h  PluginScannerWorker.cpp  PluginScannerWorker.h
Source/UI/: AutomationLanesPanel.cpp  AutomationLanesPanel.h  BWFEditorDialog.cpp  BWFEditorDialog.h  BatchExportDialog.cpp  BatchExportDialog.h  CallbackDocumentWindow.h  ChannelConverterDialog.cpp  ChannelConverterDialog.h  ChannelExtractorDialog.cpp  ChannelExtractorDialog.h  CommandPalette.cpp  CommandPalette.h  CompactTransport.cpp  CompactTransport.h  CustomizableToolbar.cpp  CustomizableToolbar.h  DCOffsetDialog.cpp  DCOffsetDialog.h  EditRegionBoundariesDialog.cpp  EditRegionBoundariesDialog.h  ErrorDialog.cpp  ErrorDialog.h  FadeCurvePreview.cpp  FadeCurvePreview.h  FadeDialog.cpp  FadeDialog.h  FadeInDialog.cpp  FadeInDialog.h  FadeOutDialog.cpp  FadeOutDialog.h  FilePropertiesDialog.cpp  FilePropertiesDialog.h  GainDialog.cpp  GainDialog.h  GenerateDialog.cpp  GenerateDialog.h  GoToPositionDialog.cpp  GoToPositionDialog.h  GraphicalEQEditor.cpp  (+77 more)
Source/Utils/: AudioBufferInputSource.cpp  AudioBufferInputSource.h  AudioClipboard.cpp  AudioClipboard.h  AudioUnits.h  AutoSaveRecovery.cpp  AutoSaveRecovery.h  AutomationClipboard.h  BWFMetadata.cpp  BWFMetadata.h  Document.cpp  Document.h  DocumentManager.cpp  DocumentManager.h  KeymapManager.cpp  KeymapManager.h  Marker.cpp  Marker.h  MarkerManager.cpp  MarkerManager.h  NavigationPreferences.h  ProgressCallback.h  Region.cpp  Region.h  RegionExporter.cpp  RegionExporter.h  RegionManager.cpp  RegionManager.h  Settings.cpp  Settings.h  SidecarPolicy.cpp  SidecarPolicy.h  ThumbnailDiskCache.cpp  ThumbnailDiskCache.h  ToolbarConfig.cpp  ToolbarConfig.h  ToolbarManager.cpp  ToolbarManager.h  UCSCategorySuggester.cpp  UCSCategorySuggester.h  (+4 more)
Templates/Keymaps/: Default.json  MAPPING_REFERENCE.md  ProTools.json  SoundForge.json
Templates/Toolbars/: Compact.json  DSPFocused.json  Default.json  SoundForge.json
TestFiles/: moans.wav.regions.json
Tests/: ChannelSystemTests.cpp  TestRunner.cpp
Tests/Integration/: AudioFileManagerPass2Tests.cpp  ClipboardChannelMismatchTests.cpp  EditingToolsTests.cpp  FileIOTests.cpp  InterFileClipboardTests.cpp  MultiDocumentTests.cpp  MultiRegionDragTests.cpp  PlaybackEditingIntegrationTests.cpp  RegionListBatchRenameTests.cpp  RegionListPanelTests.cpp  SaveAs8BitTests.cpp  SaveAsFormatsTests.cpp
Tests/TestUtils/: AudioAssertions.h  MockAudioProcessor.h  TestAudioFiles.h
Tests/Unit/: AudioBufferManagerRegressionTests.cpp  AudioBufferManagerTests.cpp  AudioEngineTests.cpp  AudioProcessorTests.cpp  AutoSaveRecoveryPass2Tests.cpp  AutomationApplyGuardTests.cpp  AutomationLanesPanelRowIndexTests.cpp  AutomationLanesPanelTests.cpp  AutomationRecorderTests.cpp  (+28 more)
cmake/: relink_bundled_dylib.sh
scripts/: check_rendered_ascii.py
(+13 files in other folders)
